b->series. Remove width and height override from the JS.

--- a/series.html
+++ b/series.html
@@ -7,6 +7,6 @@
   stroke-width: 1.5px;
 }
 </style>
-<svg width="960" height="500"></svg>
+<svg width="520" height="250"></svg>
 <script src="d3.v4.js"></script>
-<script src="b.js"></script>
+<script src="series.js"></script>
