--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 }
 </style>
 <svg width="520" height="250"></svg>
-<script src="d3.v4.js"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="series.js"></script>
