--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
-.line {
-  fill: none;
-  stroke: #000;
-  stroke-width: 1.5px;
-}
-</style>
-<svg width="520" height="250"></svg>
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="series.js"></script>
+<html lang="en">
+<head>
+    <title>D3 Scrolling Data</title>
+    <meta charset="utf-8">
+    <style>
+        .line {
+            fill: none;
+            stroke: #000;
+            stroke-width: 1.5px;
+        }
+    </style>
+</head>
+<body>
+    <svg width="520" height="250"></svg>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="series.js"></script>
+</body>
+</html>
