--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <svg width="520" height="250"></svg>
     <script type="module">
-      import * as ds from 'https://d3js.org/d3.v7.min.js'
+      import * as d3 from "https://cdn.skypack.dev/d3@7"
       import { series } from './series.js'
 
-      const random = d3.randomUniform (0, 1);
-      series (time => random ());
+      const random = d3.randomUniform(0, 1)
+      series(time => random());
     </script>
 </body>
 </html>
