--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>D3 Scrolling Data</title>
-    <meta charset="utf-8">
-    <style>
-        .line {
-            fill: none;
-            stroke: #000;
-            stroke-width: 1.5px;
-        }
-    </style>
+  <title>D3 Scrolling Data</title>
+  <meta charset="utf-8">
+  <style>
+    .axis path, .tick line {
+      stroke: #b8b8b8;
+    }
+    .line {
+      fill: none;
+      stroke: #000;
+      stroke-width: 1.5px;
+    }
+  </style>
 </head>
 <body>
-    <svg width="520" height="250"></svg>
-    <script type="module">
-      import * as d3 from "https://cdn.skypack.dev/d3@7"
-      import { series } from './series.js'
+  <svg id="chart" width="520" height="250"></svg>
+  <script type="module">
+    import * as d3 from "https://cdn.skypack.dev/d3@7"
+    import { series } from './series.js'
 
-      const random = d3.randomUniform(0, 1)
-      series(time => random());
-    </script>
+    series('#chart', d3.randomUniform(0, 1))
+  </script>
 </body>
 </html>
